--- a/notebooks/01_eda_and_features.ipynb
+++ b/notebooks/01_eda_and_features.ipynb
@@ -153,7 +153,7 @@
          "type": "string"
         }
        ],
-       "ref": "5f400bb7-5906-436b-ae59-edb1aaa0bbbe",
+       "ref": "b7fdc100-5ae4-4ead-bfc5-2986e9dcd838",
        "rows": [
         [
          "0",
@@ -798,7 +798,7 @@
          "type": "string"
         }
        ],
-       "ref": "69d8e1da-3d97-4c39-9562-185ce8a202cb",
+       "ref": "410d5e71-93be-40b6-ae04-31bb88dd3cf0",
        "rows": [
         [
          "488",
@@ -1715,7 +1715,7 @@
          "type": "integer"
         }
        ],
-       "ref": "457bee72-a275-46c0-8005-56a20a138070",
+       "ref": "aa4bbb53-c016-4fdd-8ba1-b43ff3c7645f",
        "rows": [
         [
          "customerID",
@@ -2756,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "fe641ade",
    "metadata": {},
    "outputs": [
@@ -2870,7 +2870,7 @@
          "type": "string"
         }
        ],
-       "ref": "f0488ca7-eaf5-441b-bd80-07dff85b960d",
+       "ref": "f3280185-dfa7-4ddb-9ed4-c176f11c1f20",
        "rows": [
         [
          "0",
@@ -3191,7 +3191,7 @@
        "4   Yes  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3199,6 +3199,16 @@
    "source": [
     "data = data.drop(\"customerID\", axis=1) # remove customerID\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fa5454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_parquet(\"../data/processed.parquet\", index=False) # Save processed data"
    ]
   }
  ],
